# bdns_etl

./: .env.example  .gitignore  .project  Dockerfile  README.md  STATUS_ETL.md  docker-compose.yml  init_database.py  init_db.sql
backend/: .env.development  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  run.sh  test_config.py  test_config2.py  test_pydantic.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_etl_control.py  b51e8f796ccd_agregar_campo_log_a_etl_execution.py
backend/src/bdns_etl/: __init__.py
backend/src/bdns_etl/api/: __init__.py  auth.py  etl_router.py
backend/src/bdns_etl/services/: __init__.py  etl_service.py  etl_service.py.bak  secrets.py
etl_scripts/: create_partitions.py  run_etl.py  run_etl.py.bak
frontend/: index.html  package-lock.json  package.json  vite.config.simple.js
frontend/src/: App.vue  style.css
migrations/: 002_add_execution_progress_fields.sql
secrets/: README.md  generate_password_hash.py
seeding/: README_NUEVAS_ENTIDADES.md  README_ORQUESTACION.md  etl_progress_reporter.py  orchestrate_all_concesiones.py  seed_ejercicio_con_validacion.py  test_new_extractors.py
seeding/ayudas_estado/: extract_ayudas_estado.py  extract_ayudas_estado.py.bak
seeding/common/: load_concesiones_from_json.py  load_from_csv.py  transform_json_to_csv.py
seeding/control/: convocatoria_2024.csv
seeding/convocatorias/: extract_control_csv.py
seeding/grandes_beneficiarios/: extract_grandes_beneficiarios.py
seeding/minimis/: extract_minimis.py
seeding/partidos_politicos/: extract_partidos_politicos.py  extract_partidos_politicos.py.old
sync/: README_CATALOG_SYNC.md  __init__.py  catalog_sync_validator.py  sync_catalogos.py  sync_weekly.py
(+42 files in other folders)
